--- a/index.html
+++ b/index.html
@@ -4,27 +4,37 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="16x16" href="IMG/favicon-32x32.png">
-  <title>Baking Site</title>
+  <title>Taylor Sherwood</title>
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <h1>Taylor's</h1>
+      <h1>Taylor Sherwood</h1>
     </div>
     <div class="navbar">
-
       <a href='#'>Home</a>
-      <a href='#'>Recipes</a>
-      <a href='#'>Crafts</a>
+      <a href='#'>Entertain</a>
+      <a href='#'>Design</a>
+      <a href='#'>Gardening</a>
+      <a href='#'>Dine</a>
       <a href='#'>Contact</a>
     </div>
   </header>
+  <div class="mainbody">
+  <div class="aboutme">
+    <div class="myphoto">
+      <img class="introimg" src="IMG/Tay'sHeadShot-7.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+  <div class="blogs">
   <div class="article1">
     <div class="photo">
-      <img src="IMG/cartdone.jpg" alt="Bar Cart">
+      <img class="articleimg" src="IMG/cartdone.jpg" alt="Bar Cart">
     </div>
     <div class="articleintro">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
@@ -33,13 +43,15 @@
   </div>
   <div class="article1">
     <div class="photo">
-      <img src="IMG/rosettes.jpg" alt="Rossetes on Pie">
+      <img class="articleimg" src="IMG/rosettes.jpg" alt="Rossetes on Pie">
     </div>
     <div class="articleintro">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
         dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </div>
+</div>
+</div>
 </body>
 
 </html>
